added an index.html2 file

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <button class="btn-primary space">Download CV</button>
             <button class="btn-prim space">Contact</button>
         </div>
-        <img class="banner-profile-pic" src="images/hardy.png">
+        <img class="banner-profile-pic" src="images/hardy.png" width="580px">
      </div>
     </header>
     <main>
-<section class="about secondary-bg">
+<section class="about secondary-bg bg">
     <h3 class="section-title">About Me</h3>
     <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
     <div class="about-items">
