https://github.com/hadida-saba/web-dev-portfolio.git

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </div>
 </div>
     </div>
-    <button class="btn-primary text-center">Download CV</button>
+    <button class="btn-primary text-cen">Download CV</button>
   </section>
     </main>
     <footer class="secondary-bg">
